--- a/4180 Final.Rmd
+++ b/4180 Final.Rmd
@@ -18,6 +18,7 @@ library(reshape2)
 library(lubridate)
 library(sf)
 library(raster)
+library(ggplot2)
 ```
 
 ```{r}
@@ -49,11 +50,43 @@ head(censusData)
 
 
 ```
+
+
 ```{r}
-
-the_2017_income <- read_csv("2017_Median_Income.csv")
-
-head(the_2017_income)
+## Make shape file for Census Population
+censusPopShp <- read_sf("geo_export_fe8d8733-afc7-42cd-b460-c1b7a15311bb.shp")
+head(censusPopShp)
 ```
+```{r}
+## Make shape file for 2017 Median Income
+censusIncShp <- read_sf("geo_export_43a087a5-8ff8-4733-9a99-dd658a9c17f4.shp")
+
+head(censusIncShp)
+```
+
+
+```{r}
+## Merge our Shape Files to one big shape file
+censusDataShp <- st_union(censusIncShp, censusPopShp)
+
+head(censusDataShp)
+
+
+plot(censusDataShp)
+
+
+
+```
+```{r}
+## Plot in ggplot
+
+ggplot() +
+  geom_sf(data = censusDataShp, aes(fill= `median_i_3`)) +
+  theme_classic() +
+  theme_dark()
+```
+
+
+
 
 
