--- a/4180 Final.Rmd
+++ b/4180 Final.Rmd
@@ -19,6 +19,8 @@ library(lubridate)
 library(sf)
 library(raster)
 library(ggplot2)
+library(stringr)
+library(incidence)
 
 
 ```
@@ -101,4 +103,37 @@ ggplot() +
 
 
 ```
+
+
+```{r}
+##Remove the Time Stamps from the Date Incidents
+police_incident$Date_Incident <- str_sub(police_incident$Date_Incident, 1, nchar(police_incident$Date_Incident)-12)
+
+head(police_incident)
+```
+
+
+
+```{r}
+##Make Incident Dates date type
+police_incident$Date_Incident <- as.Date(police_incident$Date_Incident, "%m/%d/%y")
+
+
+head(police_incident)
+```
+
+```{r}
+## Get a count of incidents by date and plot it
+i<- incidence(police_incident$Date_Incident, interval = "1 day")
+
+plot(i[1:366], border = "black", color = 'blue', xlab = "Date", ylab = 'Number of incidents' )
+
+```
+```{r}
+## Plot Incidents Per Week:
+i<- incidence(police_incident$Date_Incident, interval = "1 week")
+
+plot(i[1:53], border = "black", color = 'blue', xlab = "week", ylab = 'Number of incidents' )
+```
+
 
