--- a/4180 Final.Rmd
+++ b/4180 Final.Rmd
@@ -109,33 +109,43 @@ head(police_incident)
 ```
 
 ```{r}
+#plot number of incident by date 
 police_incident_by_date <- police_incident %>% group_by(Date_Incident) %>% summarise(frequency = n())
 
-plot_ly(police_incident_by_date, x = police_incident_by_date$Date_Incident, y = police_incident_by_date$frequency, name = "Police Incident by Date", type = "bar") %>% layout(
-         xaxis = list(title = "Date"),
-         yaxis = list(title = "Number of Incidents"))
+p <- ggplot(police_incident_by_date, aes(x = police_incident_by_date$Date_Incident, y = police_incident_by_date$frequency)) + geom_col(fill="#BE93D4") + geom_smooth() + xlab("Year") + ylab("Number of Incident")
+
+ggplotly(p)
 ```
 
 ```{r}
-
+#plot number of incident by month 
 police_incident_by_month <- police_incident_by_date %>% group_by(Date_Incident=floor_date(Date_Incident, "month")) %>%
    summarize(frequency=sum(frequency))
 
-plot_ly(police_incident_by_month, x = police_incident_by_month$Date_Incident, y = police_incident_by_month$frequency, name = "Police Incident by Month", type = "bar") %>% layout(
-         xaxis = list(title = "Month"),
-         yaxis = list(title = "Number of Incidents"))
+p <- ggplot(police_incident_by_month, aes(x = police_incident_by_month$Date_Incident, y = police_incident_by_month$frequency)) + geom_col(fill="#BE93D4") + geom_smooth() + xlab("Month") + ylab("Number of Incident")
+
+ggplotly(p)
+
 ```
 
 ```{r}
+#plot number of incident by year
 police_incident_by_year <- police_incident_by_month %>% group_by(Date_Incident=floor_date(Date_Incident, "year")) %>%
    summarize(frequency=sum(frequency))
 
-plot_ly(police_incident_by_year, x = police_incident_by_year$Date_Incident, y = police_incident_by_year$frequency, name = "Police Incident by Year", type = "bar") %>% layout(
-         xaxis = list(title = "Year"),
-         yaxis = list(title = "Number of Incidents"))
+p <- ggplot(police_incident_by_year, aes(x = police_incident_by_year$Date_Incident, y = police_incident_by_year$frequency)) + geom_col(fill="#BE93D4") + geom_smooth() + xlab("Year") + ylab("Number of Incident")
+
+ggplotly(p)
 ```
 
 ```{r}
+#police incident number by incident type
+police_incident_by_type <- police_incident %>% group_by(Incident_Type) %>% summarise(frequency = n())
 
+police_incident_by_type$Incident_Type <- factor(police_incident_by_type$Incident_Type, levels = unique(police_incident_by_type$Incident_Type)[order(police_incident_by_type$frequency, decreasing = TRUE)])
+
+p <- ggplot(police_incident_by_type, aes(x = police_incident_by_type$Incident_Type, y = police_incident_by_type$frequency)) + geom_col(fill="#BE93D4") + geom_smooth() + xlab("Type") + ylab("Number of Incident")
+
+ggplotly(p)
 ```
 
