--- a/4180 Final.Rmd
+++ b/4180 Final.Rmd
@@ -192,6 +192,79 @@ ggplotly(p)
 ```
 
 ```{r}
+##Make 2017 Police incident df
+police_incident_2017 <- police_incident[police_incident$Date_Incident >= "2017-01-01" & police_incident$Date_Incident <= "2017-12-31",]
+```
+
+
+
+```{r}
+##Make leaflet plot for police incident in 2017
+
+incident_2017_map <- leaflet(police_incident_2017) %>%
+  addTiles() %>% addCircleMarkers()
+
+incident_2017_map
 
 ```
 
+
+```{r}
+##Refine Data Frame to Just show July (Highest Crime cases)
+pi_july_2017 <-  police_incident[police_incident$Date_Incident >= "2017-07-01" & police_incident$Date_Incident <= "2017-07-31",]
+
+head(pi_july_2017)
+
+
+```
+
+
+
+```{r}
+## Make leaflet plot for police incidents in the month of 2017 with the highest crime (July 17')
+inc_map_july_2017 <- leaflet(pi_july_2017) %>%
+  addTiles() %>% addMarkers()
+
+inc_map_july_2017
+
+
+
+
+```
+
+```{r}
+##Refine DataFrame to show only part one crimes in july 2017
+pi_type1_crimes_2017 <- pi_july_2017 %>% filter(pi_july_2017$Incident_Type == "Part 1 Crimes")
+
+```
+
+
+```{r}
+## Make leaflet plot for part one police incidents in the month of July in 2017
+p1_july_map <- leaflet(pi_type1_crimes_2017) %>%
+  addTiles() %>% addMarkers()
+
+p1_july_map
+
+```
+
+```{r}
+##Refine DataFrame to show only robbery crimes in july 2017
+p1_Crimes_july_2017_robbery <- pi_july_2017 %>% filter(pi_july_2017$Incident_Description == "Robbery")
+
+head(p1_Crimes_july_2017_robbery)
+
+
+
+```
+
+
+
+```{r}
+## Make leaflet plot for part one police incidents (robberies) in the month of July in 2017
+p1_july_map_robbery <- leaflet(p1_Crimes_july_2017_robbery) %>%
+  addTiles() %>% addMarkers()
+
+p1_july_map_robbery
+
+```
